--- a/04-Array-Cardio-1/index.html
+++ b/04-Array-Cardio-1/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
   	<meta charset="utf-8">
-  	<meta name="description" content="This project is Day 1 of the 30 Day Vanilla JS Challenge organized by WesBos. In this project I made a JavaScript Drum Kit which focuses on CSS animations and key events.">
-  	<meta name="keywords" content="javascript30, drumkit, css, animations, keyevents">
+  	<meta name="description" content="This project is Day 4 of the 30 Day Vanilla JS Challenge organized by WesBos. In this project we were challenged on a few array methods. I learned about filter, map, sort, and reduce.">
+  	<meta name="keywords" content="javascript30, javascript, array, methods">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<title>Array Cardio 1 💪</title>
