--- a/09-Dev-Tools-Domination/index.html
+++ b/09-Dev-Tools-Domination/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
   	<meta charset="utf-8">
-  	<meta name="description" content="This project is Day 9 of the 30 Day Vanilla JS Challenge organized by WesBos. In this project ">
-  	<meta name="keywords" content="javascript30, javascript, array, methods">
+  	<meta name="description" content="This project is Day 9 of the 30 Day Vanilla JS Challenge organized by WesBos. This was a simple development tool exercise and we learned some dev tool tricks for google chrome browser. ">
+  	<meta name="keywords" content="javascript30, javascript, devtools, chrome, tricks">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<title>Console Tricks!</title>
