--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <div class="challenge-item">
                 <a href="13-Slide-In-On-Scroll/index.html">#13 <br> Slide In On Scroll</a>
             </div>
+            <div class="challenge-item">
+                <a href="14-JavaScript-References-VS-Copying/">#14 <br>JavaScript References VS Copying</a>
+            </div>
                         
         </div>
 
