added day 15 to main page

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <div class="challenge-item">
                 <a href="14-JavaScript-References-VS-Copying/">#14 <br>JavaScript References VS Copying</a>
             </div>
+            <div class="challenge-item">
+                <a href="15-LocalStorage/">#15 <br>LocalStorage</a>
+            </div>
                         
         </div>
 
