--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             <div class="challenge-item">
                 <a href="15-LocalStorage/">#15 <br>LocalStorage</a>
             </div>
-                        
+            <div class="challenge-item">
+                <a href="16-Mouse-Move-Shadow/">#16 <br>CSS Text Shadow Mouse Move Effect</a>
+            </div>         
         </div>
 
 		<footer>
