--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             <div class="challenge-item">
                 <a href="16-Mouse-Move-Shadow/">#16 <br>CSS Text Shadow Mouse Move Effect</a>
             </div>         
+            <div class="challenge-item">
+                <a href="17-Sort-Without-Articles/">#17 <br>Sort Without Articles</a>
+            </div>         
         </div>
 
 		<footer>
